@@ -45,6 +45,7 @@ scripts/get_intersecting_features.pl
 scripts/get_relative_data.pl
 scripts/join_data_file.pl
 scripts/manipulate_datasets.pl
+scripts/manipulate_wig.pl
 scripts/merge_datasets.pl
 scripts/pull_features.pl
 scripts/split_data_file.pl
